...
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/reminderCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        android:fadeVisible="@{true}">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                android:layout_marginLeft="@dimen/padding_small"
                android:text="@{item.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
...
